[package]
name = "ReverseShell"
version = "0.1.0"
edition = "2024"

[dependencies]


[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[profile.dev]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
# Rustflags  is defined inside .cargo\config.toml